# GraphicsAppTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  pyproject.toml  tasks.py
App/include/: ExampleGUI.h
App/include/framework/core/: App.h  Window.h
App/include/framework/graphics/: Graphics.h  OpenGL.h
App/include/framework/gui/: GUI.h
App/include/framework/utils/: Cast.h  Log.h
App/src/: ExampleGUI.cpp  main.cpp
App/src/framework/core/: App.cpp  Window.cpp
App/src/framework/graphics/: Graphics.cpp
App/src/framework/gui/: GUI.cpp
App/src/framework/utils/: Log.cpp
scripts/: build.sh  conan_profile.txt
tests/: CMakeLists.txt  test_basic.cpp
